Updates libraries, starts cross-references parsing